# finance-dashboard

./: app.py  install.sh  pyproject.toml
.streamlit/: config.toml
finance_dashboard/domain/: econ_db_series_metrics.py  formatter.py
finance_dashboard/enums/: econdb.py
finance_dashboard/pages/: economics_dashboard.py
finance_dashboard/services/econdb/: series.py
